# zero2prod

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: audit-on-push.yml  scheduled-audit.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_checks.rs
